--- a/app/common/main.css
+++ b/app/common/main.css
@@ -21,10 +21,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  position absolute;
+  position: absolute;
   top:0;
   left: 0;
   right: 0;
   bottom: 0;
-
 }
