--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+  <nav>
+    <a routerLink="/" routerLinkActive="active">Home</a>
+    <a routerLink="/submit-paper" routerLinkActive="active">Submit A Paper</a>
+  </nav>
+  <router-outlet></router-outlet>
