add network status section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-  <nav>
-    <a routerLink="/" routerLinkActive="active">Home</a>
-    <a routerLink="/submit-paper" routerLinkActive="active">Submit A Paper</a>
-  </nav>
+  <header>
+    <nav>
+      <a routerLink="/" routerLinkActive="active">Home</a>
+      <a routerLink="/submit-paper" routerLinkActive="active">Submit A Paper</a>
+    </nav>
+    <network-status></network-status>
+  </header>
   <router-outlet></router-outlet>
