--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,11 +1,14 @@
 <div class="container">
   <div id="status-bar" class="status-bar"></div>
+
   <h1 class="title">Aletheia</h1>
-  <span class="subtitle">Search the worlds peer reviewed scientific knowledge.</span>
+
+  <span class="subtitle">Search the world's peer reviewed scientific knowledge.</span>
+
   <form>
     <input id="search-papers" type="text" placeholder="Search papers..." onfocus="this.placeholder = ''" onblur="this.placeholder = 'Search papers...'"/>
     <button type="submit" placeholder="submit">
-      <i class="fa fa-search" aria-hidden="true"></i>      
+      <i class="fa fa-search" aria-hidden="true"></i>
     </button>
   </form>
   <div style="margin-top: 40px;">
