--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,14 @@
 body {
     height: 100%;
 }
+
+header {
+    display: flex;
+    justify-content: space-between;
+    background-color: #32B67A;
+    align-items: flex-end;
+}
+
 nav {
     display: flex;
     padding: 20px 20px;
