--- a/src/app/components/network-status/network-status.component.html
+++ b/src/app/components/network-status/network-status.component.html
@@ -1,6 +1,8 @@
 <div class="network-status">
-  <div class="connection-status-icon" ngValue="status"></div> <!--click for more info -->
-  <div class="peers-connected"><span ngValue="peers"></span> peers connected</div>
-  <div class="profile-link">Account: <span ngValue="address"></span></div>
-  <div class="balance"><span>Ψ</span><span class="balance-value" ngValue="balance"></span></div>
+  <!-- TODO: add status icon -->
+  <!-- <div class="connection-status-icon">{{status}}</div> -->
+  <!-- TODO: only show this section if no errors are present -->
+  <div class="peers-connected">{{peers}} peers connected</div>
+  <div class="profile-link">Account: {{address}}</div>
+  <div class="balance"><span>Ψ</span>{{balance}}</div>
 </div>
