--- a/src/app/components/network-status/network-status.component.html
+++ b/src/app/components/network-status/network-status.component.html
@@ -1,8 +1,13 @@
 <div class="network-status">
-  <!-- TODO: add status icon -->
-  <!-- <div class="connection-status-icon">{{status}}</div> -->
-  <!-- TODO: only show this section if no errors are present -->
-  <div class="peers-connected">{{peers}} peers connected</div>
-  <div class="profile-link">Account: {{address}}</div>
-  <div class="balance"><span>Ψ</span>{{balance}}</div>
+  <div class="connection-status-icon" >
+   <span *ngIf="isError()" class="error-status"><span class="fa fa-exclamation-circle"></span> Error connecting to Aletheia network</span>
+  </div>
+  <div *ngIf="!isError()" class="peers-connected" [ngClass]="{'no-peers': isNoPeers()}">
+    <span *ngIf="isConnected()" class="fa fa-check connected-status"></span>
+    <span *ngIf="isNoPeers()" class="fa fa-warning warning-status"></span>
+    {{peers}} peers connected
+  </div>
+
+  <div *ngIf="!isError()" class="profile-link">Account: {{address}}</div>
+  <div *ngIf="!isError()" class="balance"><span>Ψ</span>{{balance}}</div>
 </div>
