--- a/src/app/components/submit-paper/submit-paper.component.html
+++ b/src/app/components/submit-paper/submit-paper.component.html
@@ -6,10 +6,10 @@
   <div id="balance-div"></div>
   <div id="holder">
 
-  <div id="topup-message" style="display:none">To submit a paper to aletheia, you need goodwill. You can get goodwill by solving a captcha
-    <a href="../credit-account/credit-account.html">get goodwill</a>
+  <div id="topup-message" style="display:none">To submit a paper to aletheia, you need Aletheia Goodwill. You can get Goodwill by solving a captcha
+    <a href="../credit-account/credit-account.html">Get Goodwill</a>
   </div>
-  <button id="the-file-to-upload">Permanently share a file</button>
+  <button ngClick="shareFileButtonClick()">Submit a paper</button>
 
   <div class="upload-success-div" id="upload-success-div" style="display:none;">
     File <span class="upload-success-file-name" id="upload-success-file-name"></span> shared successfully.
