--- a/src/app/components/network-status/network-status.component.scss
+++ b/src/app/components/network-status/network-status.component.scss
@@ -1,5 +1,5 @@
 /* TODO: mobile devices */
-@import '../../../theme/colors';
+@import '../../../theme/variables-and-mixins';
 
 .network-status {
   display: flex;
