--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,30 +2,45 @@
 @import 'app/app.component.scss';
 @import 'assets/font-awesome-4.7.0/css/font-awesome.min.css';
 
-@font-face {
-  font-family: "Domine-Bold";
-  src: url('./assets/fonts/Domine-Bold.ttf')
-}
+@import "theme/variables-and-mixins";
 
-@font-face {
-  font-family: "Domine-Regular";
-  src: url('./assets/fonts/Domine-Regular.ttf')
-}
+/* Import bits of bootstrap that we use */
+@import "../node_modules/bootstrap/scss/root";
+@import "../node_modules/bootstrap/scss/reboot";
+@import "../node_modules/bootstrap/scss/type";
+@import "../node_modules/bootstrap/scss/images";
+@import "../node_modules/bootstrap/scss/code";
+@import "../node_modules/bootstrap/scss/grid";
+@import "../node_modules/bootstrap/scss/tables";
+@import "../node_modules/bootstrap/scss/forms";
+@import "../node_modules/bootstrap/scss/buttons";
+@import "../node_modules/bootstrap/scss/transitions";
+@import "../node_modules/bootstrap/scss/dropdown";
+@import "../node_modules/bootstrap/scss/button-group";
+@import "../node_modules/bootstrap/scss/input-group";
+//@import "../node_modules/bootstrap/scss/custom-forms";
+//@import "../node_modules/bootstrap/scss/nav";
+//@import "../node_modules/bootstrap/scss/navbar";
+//@import "../node_modules/bootstrap/scss/card";
+@import "../node_modules/bootstrap/scss/breadcrumb";
+//@import "../node_modules/bootstrap/scss/pagination";
+//@import "../node_modules/bootstrap/scss/badge";
+//@import "../node_modules/bootstrap/scss/jumbotron";
+@import "../node_modules/bootstrap/scss/alert";
+@import "../node_modules/bootstrap/scss/progress";
+//@import "../node_modules/bootstrap/scss/media";
+//@import "../node_modules/bootstrap/scss/list-group";
+@import "../node_modules/bootstrap/scss/close";
+@import "../node_modules/bootstrap/scss/modal";
+//@import "../node_modules/bootstrap/scss/tooltip";
+//@import "../node_modules/bootstrap/scss/popover";
+//@import "../node_modules/bootstrap/scss/carousel";
+@import "../node_modules/bootstrap/scss/utilities";
+//@import "../node_modules/bootstrap/scss/print";
 
-@font-face {
-  font-family: "Montserrat-Bold";
-  src: url('./assets/fonts/Montserrat-Bold.ttf')
-}
+/* Extend bootstrap with our own styles as necessary */
+@import "theme/type";
 
-@font-face {
-  font-family: "Montserrat-Regular";
-  src: url('./assets/fonts/Montserrat-Regular.ttf')
-}
-
-@font-face {
-  font-family: "Montserrat-Light";
-  src: url('./assets/fonts/Montserrat-Light.ttf')
-}
 
 html, body {
   margin: 0;
@@ -33,6 +48,6 @@ html, body {
   height: 100vh;
   color: #EEEEEE;  
   background-color: #32B67A;
-  font-family: 'Montserrat-Regular';
+  font-family: $font-family-base;
 }
 
