--- a/src/app/components/network-status/network-status.component.scss
+++ b/src/app/components/network-status/network-status.component.scss
@@ -5,6 +5,7 @@
   display: flex;
   padding: 20px 20px;
   .error-status {
+    display:inline-block;
     border: 1px solid $error-color;
     border-radius: 3px;
     padding: 5px 10px;
@@ -13,6 +14,7 @@
     }
   }
   .peers-connected {
+    display: inline-block;
     padding: 5px 10px;
     &.no-peers {
       border: 1px solid $warning-color;
@@ -23,9 +25,11 @@
     }
   }
   .profile-link {
+    display: inline-block;
     padding: 5px 10px;
   }
   .balance {
+    display: inline-block;
     padding: 5px 10px;
   }
 }
