--- a/src/theme/variables-and-mixins.scss
+++ b/src/theme/variables-and-mixins.scss
@@ -2,11 +2,15 @@
 @import "../../node_modules/bootstrap/scss/variables";
 @import "../../node_modules/bootstrap/scss/mixins";
 
+// Colors
 $error-color: #b60c19;
 $warning-color: #b6b213;
+$link-color: #fff;
+$link-hover-color: #fff;
+$body-color: $gray-100;
+
 
 // Fonts
-
 $font-family-sans-serif:      "Montserrat", sans-serif;
 $font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 $font-family-serif:        "Domine", serif;
