add error handler with notifications

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,5 @@
     </nav>
     <network-status></network-status>
   </header>
+  <simple-notifications [options]="notificationOptions"></simple-notifications>
   <router-outlet></router-outlet>
