--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,7 +40,7 @@
 
 /* Extend bootstrap with our own styles as necessary */
 @import "theme/type";
-
+@import "theme/notifications";
 
 html, body {
   margin: 0;
