upload files to ipfs and index them on the blockchain

--- a/src/theme/notifications.scss
+++ b/src/theme/notifications.scss
@@ -1,6 +1,10 @@
-.simple-notification {
-  box-shadow: $popover-box-shadow;
-  .icon {
-    display: none;
+div.simple-notification-wrapper {
+  width: 600px;
+  .simple-notification {
+    box-shadow: $popover-box-shadow;
+    width: 600px;
+    .icon {
+      display: none;
+    }
   }
 }
