--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -69,6 +69,7 @@ button[type="submit"] {
   }
 
   a {
+    display: inline-block;
     color: inherit;
     font-weight: 300;
     font-size: 14px;
