--- a/src/app/components/submit-paper/submit-paper-modal/submit-paper-modal.component.html
+++ b/src/app/components/submit-paper/submit-paper-modal/submit-paper-modal.component.html
@@ -12,14 +12,17 @@
     </p>
     <span class="upload-paper-filename">{{fileName}}</span>
     <button type="button" class="btn btn-secondary select-file-button" [disabled]="uploadingPaper" (click)="shareFileButtonClick()">Select a paper to upload</button>
-
+    <div class="form-group">
+      <label for="paper-title-input">Title</label>
+      <input type="text" class="form-control" id="paper-title-input" name="paper-title-input" [(ngModel)]="title">
+    </div>
     <div class="custom-control custom-checkbox">
       <input type="checkbox" class="custom-control-input" [(ngModel)]="isAuthor" id="is-author-checkbox" name="is-author-checkbox">
       <label class="custom-control-label" for="is-author-checkbox">I am the author of this manuscript</label>
     </div>
   </div>
   <div class="modal-footer">
-    <button type="submit" [disabled]="!fileName || uploadingPaper"  class="btn btn-primary">Get Aletheia Goodwill</button>
+    <button type="submit" [disabled]="!fileName || uploadingPaper"  class="btn btn-primary">Submit paper</button>
 
     <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Close click')">Close</button>
   </div>
