--- a/src/app/components/submit-paper/submit-paper-modal/submit-paper-modal.component.html
+++ b/src/app/components/submit-paper/submit-paper-modal/submit-paper-modal.component.html
@@ -11,7 +11,7 @@
       After submitting the paper it will be voted on by the community, If the paper is accepted, it will be freely downloadable for anyone running the Aletheia app.
     </p>
     <span class="upload-paper-filename">{{fileName}}</span>
-    <button type="button" class="btn btn-secondary select-file-button" [disabled]="uploadingPaper" (click)="shareFileButtonClick()">Select a paper to upload</button>
+    <button type="button" class="btn btn-secondary select-file-button" [disabled]="uploadingPaper" (click)="shareFileButtonClick()">Select a pdf to upload</button>
     <div class="form-group">
       <label for="paper-title-input">Title</label>
       <input type="text" class="form-control" id="paper-title-input" name="paper-title-input" [(ngModel)]="title">
