--- a/src/app/components/list-papers/list-papers.component.html
+++ b/src/app/components/list-papers/list-papers.component.html
@@ -2,7 +2,7 @@
 <ul>
   <li *ngFor=" let manuscript of manuscripts" class="manuscript-item">
     <span *ngIf="manuscript.author != (this.web3Monitor.networkStatus | async).address">
-      {{(this.web3Monitor.networkStatus | async)}}
+      {{(manuscript.author | async)}}
     </span>
     <b>{{manuscript.title}}</b>
     <i>
